<resources>
    <string name="app_name"> Android Training App</string>
    <string name="button">Button</string>
    <string name="type_something">Type Something</string>
    <string name="button1">Button1</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="post">Post</string>
    <string name="gaurav_kumar_kashodhan">Gaurav kumar kashodhan</string>
    <string name="gaurav_kumar">Gaurav_kumar</string>
    <string name="number">number</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="press">Press</string>
    <string name="Long_Text">This is a Longer Text</string>
    <string name="Message">Qoutes From Renowned Authors</string>
    <string name="a">A</string>
    <string name="highscore">HighScore :</string>
    <string name="sharedPrefKey">com.example.layout.PREF_KEY</string>
    <string name="sec">sec</string>
    <string name="time">Time</string>
    <string name="_0">0</string>
    <string name="try_again">Try again</string>
    <string name="start">start</string>
    <string name="GameOver">Game Over</string>
    <string name="tap">Tap</string>
    <string name="click">click</string>
    <string name="settings">Settings</string>
    <string name="feedback">FeedBack</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm PassWord</string>
    <string name="songname">SongName</string>
    <string name="link">Link</string>
    <string name="add">ADD</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Roll_no">Roll No</string>
    <string name="Class">Class</string>
    <string name="Address">Address</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Submit">Submit</string>
    <string name="id">ID</string>
    <string name="facebook_application_id" translatable="false">1:228736357241:android:d00d7f44b6a96dc1ce95a8</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1:228736357241:android:d00d7f44b6a96dc1ce95a8</string>
    <string name="SignOut">SignOut</string>
    <string name="sign_in_with_google">Sign in with Google</string>
</resources>
