<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvStudentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvFathersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/father_s_name"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/tvMothersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/mother_s_name"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Class"
                android:textSize="15sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>