<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/etName"
        android:hint="@string/name"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/etRollNo"
        android:hint="@string/Roll_no"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/etClass"
        android:hint="@string/Class"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRollNo"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/etAddress"
        android:hint="@string/Address"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etClass"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/etFathersName"
        android:hint="@string/father_s_name"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAddress"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/etMothersName"
        android:hint="@string/mother_s_name"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFathersName"
        android:inputType="text"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/etContactInfo"
        android:hint="@string/Contact_Number"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMothersName"
        android:inputType="text"
        tools:ignore="Autofill" />
 <Button
     android:id="@+id/btnStudentInfoSubmit"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:text="@string/Submit"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/etContactInfo"
     />


</androidx.constraintlayout.widget.ConstraintLayout>